style.css
/*font-family: 

Poppins, sans serif
RocknRoll, cursive

Colors:

Primary:

Blood red: hsl(355, 66, 38)
Black: hsl(150, 100, 0)
Grunge Yellow: hsl(49, 16, 53) 

Neutral:

Light gray: hsl(22, 6, 76)
Medium gray: hsl(17, 4, 65)
Deep Gray: hsl(353, 6, 28)

*/

:root {
    --ff-sans: 'Poppins', sans-serif;
    --fw-light: 200;
    --fw-normal: 400;
    --fw-bold: 600;

    --ff-rock: "Michroma", sans-serif;
    --ff-rocktwo: "RocknRoll", sans-serif;

    --fs-400: 0.927rem;
    --fs-500: 1.25rem;
    --fs-600: 1.625rem;
    --fs-900: 2.5rem;
    --fs-1200: 3.5rem;

    --clr-neutralLG: hsl(22, 6%, 76%);
    --clr-neutralMG: hsl(17, 4%, 65%);
    --clr-neutralDG: hsl(353, 6%, 28%);
    --clr-primaryBR: hsl(355, 66%, 38%);
    --clr-primaryBlack: hsl(150, 100%, 0%);
    --clr-primaryGY: hsl(49, 16%, 53%);


}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    line-height: inherit;
    font-family: var(--ff-sans);
    
}

header {
    background-color: black;
    top: 0;
    width: 100%;
}


nav {
    top:0;
    width: 100%;
    display: flex;
    flex-direction: column;
    padding: 2.7rem;
    align-items: center;
    overflow: hidden;
}

.sticky {
    position: fixed;
    background: red;
    transition: 0.2s ease-in;
}


ul {
    display: flex;
    list-style: none;
    overflow: hidden;
    justify-content: space-between;
    align-items: center;
    gap: 14rem;
    padding: 0;
    margin: 0.4rem;
    transform: translateY(8px);
    font-family: var(--ff-rock);
    font-size: var(--fs-500);
    font-weight: var(--fw-normal);
}

.nav__links a {
    text-decoration: none;
    color: var(--clr-neutralLG);
}

.nav__links li:nth-child(3) {
    margin-left: 4.2rem;
}

.nav__links li:nth-child(2) {
    margin-left: 4.3rem;
}

#logo {
    transition: opacity 1s ease-in 0.8s;
}

.logo {
    display: block;
    max-width: 60px;
    margin: 0 auto;
    text-align: center;
}

.logo img {
    width: 100%;
    height: 100%;
    object-fit: contain;
}

.section-wrapper {
    height: 90vh;
    display: flex;
    align-items: center;
    justify-content: center;
    color: var(--color-light-gray);
    text-align: center;
    background-color: blueviolet;
}

.hero-container {
    display: flex;
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(images/hero-image.jpg);
    height: 100vh;
    width: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    justify-content: center;
    align-items: center;
}

.headline {
    position: absolute;
    display: flex;
    gap: 4rem;
    text-transform: uppercase;
    font-family: var(--ff-rock);
    font-size: var(--fs-900);
    color: var(--clr-primaryGY);
    /*transform: translateY(15px)*/ /*avoids unnecessary stacking while scrolling*/
}

.get-tickets {
    position: relative;
    top: 100px;
    
}

